Fri Nov 12 15:29:36 1993  Jeffrey A. Law  (law@snake.cs.utah.edu)

	* som.c (hppa_som_gen_reloc_type): New function.
	(som_bfd_reloc_type_lookup): New function.

	* som.c (try_prev_fixup): New function.
	(som_reloc_skip): New function.
	(som_reloc_addend): New function.

	* som.c (som_initialize_reloc_queue): New function.
	(som_reloc_queue_insert): Likewise.
	(som_reloc_queue_fix): Likewise.
	(som_reloc_queue_find): Likewise.

	* som.c (som_hppa_howto_table): SOM howto relocation table.
	(hppa_som_reloc): New function.

	* som.c (struct reloc_queue): New structure to keep track of
	the last four multibyte relocations emitted.
	(enum pa_symbol_type): Type to fully describe the symbol types
	associated with .import/.export assembler directives.

	* som.c: Include libhppa.h

	* som.c (bfd_som_set_section_attributes): New function.
	(bfd_som_set_subsection_attributes): Likewise.
	(bfd_som_set_symboL_type): Likewise.
	(bfd_som_attach_unwind_info): Likewise.
	* som.h: Declare new exported functions.

	* som.h (struct som_symbol): Add new fields to hold additional
	information needed to build/write symbol tables and fixup streams.
	(struct som_section_data_struct): Add new fields to hold additional
	information needed to build/write space and subspace headers.
	(som_symbol_data): New accessor macro for SOM symbol information.
	(R_HPPA_*): Basic relocation types to be used by the assembler.

Fri Nov 12 11:00:28 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* trad-core.c (trad_unix_core_file_p): If new hook
	TRAD_CORE_ALLOW_ANY_EXTRA_SIZE defined, then skip the check for the
	corefile being too big.
	* hosts/i386sco.h: Define it.

Thu Nov 11 15:16:28 1993  Jeffrey A. Law  (law@snake.cs.utah.edu)

	* bfd.c (struct _bfd): Add hppabsd_core_data.
	* targets.c (target_vector): Add hppabsd_core_vec.
	* hpux-core.c (hpux_core_core_file_p): Fail if an unknown core
	section is encountered during core section scanning.
	* hppabsd-core.c: New file.